# python-web-homework-01

./: Bot.py  README.md  UML.html  __main__.py  setup.cfg
Documentation/: cmd_install.txt
src/: main.py  objects.py
