[metadata]
name = Team_10_CP
version = 0.0.1
author = Volodymyr, Ihor, Sergiy, Taras, Maxym
author_email = vova.pruglo22@gmail.com
description = Assist bot
classifiers =
    "Programming Language :: Python :: 3"

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    requests
    importlib-metadata; python_version<"3.8"

[options.entry_points]
console_scripts =
    start_bot = src.main:main

[project.urls]
"Github" = "https://github.com/VolodymyrPruhlo/Team_10_CP"